# eddeserus

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
benches/: 10demo_events.jsonl  experiment.rs  sede.rs
resources/: 50events.json
src/: de.rs  experiment.rs  lib.rs  process.rs  read.rs  se.rs  types.rs
