[package]
name = "eddeserus"
version = "0.1.10"
authors = ["Bradley Saul <bsaul@novisci.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.11", features = ["derive"] }
serde_json = { version = "1.0.11" }
serde_tuple = "0.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sede"
harness = false

[profile.bench]
debug = true